@@ -1,7 +1,7 @@
 /* -*- mode: objc -*-
    Project: DataBasin
 
-   Copyright (C) 2009-2014 Free Software Foundation
+   Copyright (C) 2009-2017 Free Software Foundation
 
    Author: Riccardo Mottola
 
@@ -24,6 +24,8 @@
 
 #import <Foundation/Foundation.h>
 
+#import "DBFileWriter.h"
+
 enum DBCSVLineBreakHandling
 {
   DBCSVLineBreakNoChange = 0,
@@ -34,12 +36,8 @@ typedef enum DBCSVLineBreakHandling DBCSVLineBreakHandling;
 
 @protocol DBLoggerProtocol;
 
-@interface DBCSVWriter : NSObject
+@interface DBCSVWriter : DBFileWriter
 {
-  id<DBLoggerProtocol> logger;
-  NSArray      *fieldNames;
-  NSArray      *fieldTypes;
-  NSFileHandle *file;
   NSString     *separator;
   BOOL         isQualified;
   NSString     *qualifier;
@@ -55,13 +53,6 @@ typedef enum DBCSVLineBreakHandling DBCSVLineBreakHandling;
 - (void)setLineBreakHandling: (DBCSVLineBreakHandling)handling;
 - (BOOL)writeFieldsOrdered;
 - (void)setWriteFieldsOrdered:(BOOL)flag;
-- (id)initWithHandle:(NSFileHandle *)fileHandle;
-- (void)setLogger:(id<DBLoggerProtocol>)l;
-- (void)setFieldNames: (id)obj andWriteThem: (BOOL)flag;
-- (void)writeStart;
-- (void)writeEnd;
-- (void)writeDataSet:(NSArray *)array;
-- (NSString *)formatOneLine:(id)data forHeader:(BOOL) headerFlag;
 - (void)setStringEncoding: (NSStringEncoding) enc;
 
 @end
