@@ -21,8 +21,10 @@
 		850A48C51912D4CB00B9303D /* DBSObject.h in Headers */ = {isa = PBXBuildFile; fileRef = 850A48B91912D4CB00B9303D /* DBSObject.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		850A48C61912D4CB00B9303D /* DBSObject.m in Sources */ = {isa = PBXBuildFile; fileRef = 850A48BA1912D4CB00B9303D /* DBSObject.m */; };
 		850A48D819131EC500B9303D /* WebServices.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 850A48D719131EC500B9303D /* WebServices.framework */; };
+		850FFFBB1F71DA8700B86D18 /* DBFileWriter.h in Headers */ = {isa = PBXBuildFile; fileRef = 850FFFB91F71DA8700B86D18 /* DBFileWriter.h */; settings = {ATTRIBUTES = (Public, ); }; };
+		850FFFBC1F71DA8700B86D18 /* DBFileWriter.m in Sources */ = {isa = PBXBuildFile; fileRef = 850FFFBA1F71DA8700B86D18 /* DBFileWriter.m */; };
 		85125B25192031A6000E6004 /* ChangeLog in Resources */ = {isa = PBXBuildFile; fileRef = 85125B24192031A6000E6004 /* ChangeLog */; };
-		8534AFED1DAB9919005F5ECD /* DBHTMLWriter.h in Headers */ = {isa = PBXBuildFile; fileRef = 8534AFEB1DAB9919005F5ECD /* DBHTMLWriter.h */; };
+		8534AFED1DAB9919005F5ECD /* DBHTMLWriter.h in Headers */ = {isa = PBXBuildFile; fileRef = 8534AFEB1DAB9919005F5ECD /* DBHTMLWriter.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		8534AFEE1DAB9919005F5ECD /* DBHTMLWriter.m in Sources */ = {isa = PBXBuildFile; fileRef = 8534AFEC1DAB9919005F5ECD /* DBHTMLWriter.m */; };
 		8DC2EF530486A6940098B216 /* InfoPlist.strings in Resources */ = {isa = PBXBuildFile; fileRef = 089C1666FE841158C02AAC07 /* InfoPlist.strings */; };
 		8DC2EF570486A6940098B216 /* Cocoa.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 1058C7B1FEA5585E11CA2CBB /* Cocoa.framework */; };
@@ -47,6 +49,8 @@
 		850A48B91912D4CB00B9303D /* DBSObject.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; path = DBSObject.h; sourceTree = "<group>"; };
 		850A48BA1912D4CB00B9303D /* DBSObject.m */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.objc; path = DBSObject.m; sourceTree = "<group>"; };
 		850A48D719131EC500B9303D /* WebServices.framework */ = {isa = PBXFileReference; lastKnownFileType = wrapper.framework; name = WebServices.framework; path = /Library/Frameworks/WebServices.framework; sourceTree = "<absolute>"; };
+		850FFFB91F71DA8700B86D18 /* DBFileWriter.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = DBFileWriter.h; sourceTree = "<group>"; };
+		850FFFBA1F71DA8700B86D18 /* DBFileWriter.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = DBFileWriter.m; sourceTree = "<group>"; };
 		85125B24192031A6000E6004 /* ChangeLog */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = text; path = ChangeLog; sourceTree = "<group>"; };
 		8534AFEB1DAB9919005F5ECD /* DBHTMLWriter.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = DBHTMLWriter.h; sourceTree = "<group>"; };
 		8534AFEC1DAB9919005F5ECD /* DBHTMLWriter.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = DBHTMLWriter.m; sourceTree = "<group>"; };
@@ -121,6 +125,8 @@
 				850A48BA1912D4CB00B9303D /* DBSObject.m */,
 				8534AFEB1DAB9919005F5ECD /* DBHTMLWriter.h */,
 				8534AFEC1DAB9919005F5ECD /* DBHTMLWriter.m */,
+				850FFFB91F71DA8700B86D18 /* DBFileWriter.h */,
+				850FFFBA1F71DA8700B86D18 /* DBFileWriter.m */,
 			);
 			name = Classes;
 			sourceTree = "<group>";
@@ -169,6 +175,7 @@
 				850A48C31912D4CB00B9303D /* DBSoapCSV.h in Headers */,
 				850A48C51912D4CB00B9303D /* DBSObject.h in Headers */,
 				8534AFED1DAB9919005F5ECD /* DBHTMLWriter.h in Headers */,
+				850FFFBB1F71DA8700B86D18 /* DBFileWriter.h in Headers */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -241,6 +248,7 @@
 				850A48C41912D4CB00B9303D /* DBSoapCSV.m in Sources */,
 				850A48C61912D4CB00B9303D /* DBSObject.m in Sources */,
 				8534AFEE1DAB9919005F5ECD /* DBHTMLWriter.m in Sources */,
+				850FFFBC1F71DA8700B86D18 /* DBFileWriter.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
